# DocumentaryAI

./: .env.example  .gitignore  CONTRIBUTING.md  main.py  pyproject.toml
app/: app.py  project_manager.py  ui.py
app/advisor/: README.md  __init__.py  analysis.py  analyzers.py  interfaces.py  knowledge_reader.py  models.py  orchestrator.py  persistence.py
app/aim/: README.md  __init__.py  capability_matrix.py  errors.py  health.py  http.py  interfaces.py  metrics.py  models.py  orchestrator.py  persistence.py  providers.py  readiness.py  registry.py  retry.py  secrets.py
app/alr/: README.md  __init__.py  deduplication.py  fingerprint.py  manifest.py  models.py  orchestrator.py  registry.py  search.py  storage.py
app/application/: __init__.py  channel_identity.py  deterministic_planner.py  director_service.py  documentary_assembler.py  emotional_narrative_director.py  evidence_extractor.py  evidence_service.py  (+16 more)
config/: settings.py
docs/: DEVELOPMENT_GUIDE.md  README.md  TEAM_CHARTER.md
scripts/: generate_documentary.py  mode_a_render.py
tests/: test_advisor.py  test_aim.py  test_aim_adapters.py  test_alr.py  test_cce.py  test_cme.py  test_composer.py  test_dca.py  test_dca_backlog.py  test_dca_evaluation.py  test_director.py  test_dks.py  test_dle.py  test_dle_monitor.py  test_dle_queue.py  test_dle_queue_input.py  test_dle_storage_policy.py  test_dlm.py  test_documentary_assembler.py  test_eae.py  test_eae_discovery.py  test_eae_discovery_real.py  test_eae_planner.py  test_ece.py  test_evidence_extraction.py  test_executor.py  test_fact_consolidation.py  test_gitops.py  test_images.py  test_infra.py  test_kbg.py  test_knowledge_graph.py  test_llm_provider_factory.py  test_llm_stage.py  test_nar.py  test_narrative.py  test_narrative_engine.py  test_pcx.py  test_provider_orchestration.py  test_rda.py  (+26 more)
(+600 files in other folders)
